<?xml version="1.0"?>
<package>
  <name>main_controller_installer</name>
  <version>0.0.1</version>
  <description>The main_controller_installer package</description>

  <maintainer email="gstavrinos@iit.demokritos.gr">pi</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
